# MiroFlow

./: .env.template  .gitattributes  .gitignore  404.html  AGENTS.md  README.bak.md  README.md  README_ja.md  README_zh.md  REUSE.toml  SETUP_GUIDE.md  SINGLE_TASK_TEST_README.md  common_benchmark.py  debug_message_history.json  e2b.Dockerfile  guide.md  index.html  justfile  main.py  mcp_config.json  monitor_guide.md  opencode.json  pyproject.toml  run_benchmark_with_monitor.py  run_gaia_with_monitor.py  run_single_task_example.py  search.html  task_result.json  test.py  test_benchmark.py  test_mirothinker_api.py  test_parse_skill.py  test_single_task.py  test_single_task_mirothinker.py  versions.json
about/: index.html
all_about_agents/: index.html
applications/: index.html
apps/eval-agent/: pyproject.toml
apps/eval-agent/src/eval_agent/: __init__.py
browsecomp_en/: index.html
browsecomp_zh/: index.html
claude-3.7-sonnet/: index.html
config/: __init__.py  agent-browsecomp-gpt5-single-agent.yaml  agent-gaia-validation-mirothinker-single-agent.yaml  agent-gaia-validation-text-only-gpt5-single-agent.yaml  agent-gaia-validation-text-only-mirothinker-single-agent.yaml  agent_browsecomp-gpt5-single-agent.yaml  agent_finsearchcomp.yaml  agent_finsearchcomp_mirothinker.yaml  agent_gaia-validation-gpt5-multi-agent.yaml  agent_gaia-validation-gpt5-single-agent.yaml  agent_gaia-validation-gpt5.yaml  agent_gaia-validation-gpt5_new_version.yaml  agent_gaia-validation-text-only_mirothinker_single_agent.yaml  agent_gaia-validation-text-only_mirothinker_single_agent_new_tools.yaml  (+40 more)
libs/miroflow-contrib/: pyproject.toml
libs/miroflow-contrib/.cursor/rules/: tool-development.mdc
libs/miroflow-contrib/src/miroflow/contrib/pocket/: core.py  core_v2.py
libs/miroflow-contrib/src/miroflow/contrib/tracing/: __init__.py  create.py  logger.py  otlp_exporter.py  otlp_json.py  otlp_setup.py  processor_interface.py  processors.py  provider.py  scope.py  setup.py  span_data.py  spans.py  traces.py  util.py
libs/miroflow-contrib/tests/: test_demo.py
libs/miroflow-contrib/tests/tracing/: conftest.py  deprecated_tracing_errors.py  deprecated_tracing_errors_streamed.py  test_processor_api_key.py  test_trace_processor.py  test_tracing.py  testing_processor.py
(+526 files in other folders)
